Use List.of for Java attribute stores